# internal/router/user_routes.go
@@ -17,6 +17,12 @@ import (
 func desactiveCodesJob() {
 	userServiceRedis := service.CreateUserServiceRedis(redis.Rc)
 	userService := service.CreateUserService(repository.DB, userServiceRedis)
+	err := userService.ExpireCodes()
+	if err != nil {
+			logger.ZapLogger.Error("error from userservice.findexpiratedcodes", zap.Error(err))
+		} else {
+			logger.ZapLogger.Info("codes were expired")
+	}
 	ticker := time.NewTicker(5 * time.Minute)
 	go func() {
 		defer ticker.Stop()
@@ -46,13 +52,14 @@ func setupUserRoutes(userGroup fiber.Router) {
 	userServiceRedis := service.CreateUserServiceRedis(redis.Rc)
 	userService := service.CreateUserService(repository.DB, userServiceRedis)
 	userController := handler.UserController{UserService: userService}
-	userGroup.Get("/all", middleware.VerifyJWT(), middleware.VerifyIfUserExistsAndIfUserIsExpired(), middleware.CheckRole([]string{helper.Ceo}) ,userController.FindAllUsers())
+	userGroup.Get("/all", middleware.VerifyJWT(), middleware.VerifyIfUserExistsAndIfUserIsExpired(),middleware.IsActiveOrInactive(true)  , middleware.CheckRole([]string{helper.Ceo}) ,userController.FindAllUsers())
 	userGroup.Post("/create", userController.CreateUser())
-	userGroup.Post("/verify")
+	userGroup.Get("/new_code", middleware.VerifyJWT(), middleware.VerifyIfUserExistsAndIfUserIsExpired(), middleware.IsActiveOrInactive(false), userController.GetNewCode())
+	userGroup.Post("/verify", middleware.VerifyJWT(), middleware.VerifyIfUserExistsAndIfUserIsExpired(),middleware.IsActiveOrInactive(false), userController.VerifyUser())
 	userGroup.Post("/login", userController.LoginUser())
-	userGroup.Get("/one/:id", middleware.VerifyJWT(),middleware.VerifyIfUserExistsAndIfUserIsExpired(), middleware.SameIdOrRole([]string{helper.Ceo}) ,userController.FindOneUser())
-	userGroup.Put("/update/:id", middleware.VerifyJWT(), middleware.VerifyIfUserExistsAndIfUserIsExpired(), middleware.SameIdOrRole([]string{}), userController.UpdateOneUser())
-	userGroup.Patch("/update/role/:id", middleware.VerifyJWT(), middleware.VerifyIfUserExistsAndIfUserIsExpired(), middleware.CheckRole([]string{helper.Ceo}), userController.UpdateOneUserRole())
+	userGroup.Get("/one/:id", middleware.VerifyJWT(),middleware.VerifyIfUserExistsAndIfUserIsExpired(), middleware.IsActiveOrInactive(true) ,middleware.SameIdOrRole([]string{helper.Ceo})  ,userController.FindOneUser())
+	userGroup.Put("/update/:id", middleware.VerifyJWT(), middleware.VerifyIfUserExistsAndIfUserIsExpired(),middleware.IsActiveOrInactive(true) , middleware.SameIdOrRole([]string{}), userController.UpdateOneUser())
+	userGroup.Patch("/update/role/:id", middleware.VerifyJWT(), middleware.VerifyIfUserExistsAndIfUserIsExpired(), middleware.IsActiveOrInactive(true) , middleware.CheckRole([]string{helper.Ceo}), userController.UpdateOneUserRole())
 	
 	logger.ZapLogger.Info("user routes are running!")
 }
